[package]
name = "twitchdrops_miner"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
twitch-gql-rs = "0.1.5"
dialoguer = "0.11.0"
chrono = "0.4.42"