[package]
name = "twitchdrops_miner"
version = "0.3.1-rc.1"
edition = "2024"
description = "Automatically watches Twitch streams and claims Time-Based Drops for selected games"
license = "MIT"
repository = "https://github.com/this-is-really/TwitchDropSentry/tree/main"
homepage = "https://github.com/this-is-really/TwitchDropSentry"
keywords = ["twitch", "drops", "automation", "cli"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
twitch-gql-rs = "0.2.0"
dialoguer = "0.11.0"
once_cell = "1.21.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
indicatif = "0.18.2"
tracing-appender = "0.2.3"