[package]
name = "twitchdrops_miner"
version = "0.3.3"
edition = "2024"
description = "Automatically watches Twitch streams and claims Time-Based Drops for selected games"
license = "MIT"
repository = "https://github.com/this-is-really/TwitchDropSentry/tree/main"
homepage = "https://github.com/this-is-really/TwitchDropSentry"
keywords = ["twitch", "drops", "automation", "cli"]

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twitch-gql-rs = "0.2.4"
dialoguer = "0.12.0"
once_cell = "1.21.3"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
indicatif = "0.18.3"
tracing-appender = "0.2.4"